force-app/main/default/objects/Medical_Care__c/Medical_Care__c.object-meta.xml
<CustomObject>
    <label>Medical Care</label>
    <nameField>
        <displayFormat>MC-{0000}</displayFormat>
        <label>Medical Care</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Care</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>