force-app/main/default/objects/Medical_Care__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>