force-app/main/default/objects/Medical_Care__c/fields/CostDescription__c.field-meta.xml
<CustomField>
    <fullName>CostDescription__c</fullName>
    <label>Cost Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>