force-app/main/default/objects/Medical_Care__c/fields/Neutered__c.field-meta.xml
<CustomField>
    <fullName>Neutered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Neutered</label>
    <type>Checkbox</type>
</CustomField>