force-app/main/default/objects/Medical_Care__c/fields/Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Symptoms__c</fullName>
    <label>Symptoms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>