force-app/main/default/objects/Medical_Care__c/fields/TreatmentDuration__c.field-meta.xml
<CustomField>
    <fullName>TreatmentDuration__c</fullName>
    <label>Treatment Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>